# mcp-mail-agents

./: .gitignore  LICENSE  README.md  pyproject.toml  server.py
.claude/: settings.json
docs/: human-in-the-loop.md
prompts/: leader.md  qa.md  worker.md
skills/: backend-senior.md  frontend-senior.md  frontend-ux-ui.md  leader.md  qa.md  worker.md
skills/backend/: architect.md
skills/qa/: automation-engineer.md
