[project]
name = "mcp-mail-agents"
version = "0.1.0"
description = "AI Mailbox MCP Server — async communication between AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "ai", "agents", "mailbox", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-mail-agents = "server:main"

[project.urls]
Homepage = "https://github.com/luiz-cartorio/mcp-mail-agents"
Repository = "https://github.com/luiz-cartorio/mcp-mail-agents"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
