[project]
name = "mcp-master-of-puppets"
version = "0.5.3"
description = "AI Mailbox MCP Server — async communication between AI agents"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
keywords = ["mcp", "ai", "agents", "mailbox", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
]
dependencies = [
    "mcp[cli]>=1.0.0",
    "pyyaml>=6.0",
]

[project.scripts]
mcp-master-of-puppets = "server:main"

[project.urls]
Homepage = "https://github.com/bezerraluiz/mcp-master-of-puppets"
Repository = "https://github.com/bezerraluiz/mcp-master-of-puppets"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py", "prompts/"]
